# pypinnch

./: README.md  readme.txt  setup.cfg
_F/: CODE_OF_CONDUCT.md  LICENSE
__include__/: output_vtu_foreach.h  pypinnch.h  pypinnch_bas.h
pypinnch/: __init__.py
pypinnch/_impl/: __init__.py  background.py  constraint.py  driver.py  driverconfig.py  hub.py  kit.py  models.py  moment.py  npart.py  parameters.py  problem.py  residual.py  solution.py  topline.py  types.py  usebase.py
pypinnch/_impl/impl2/: __init__.py  actionmanager.py  config.py  grad.py  ledger.py  numpy.py  resultplotter.py  rotatedict.py  rotatelist.py  timehorizon.py  torch.py
pypinnch/action/: __init__.py  info.py  losscurves.py  mltest.py  modelcheckpoint.py  passfail.py  result.py
pypinnch/action/action_impl/: __init__.py  action.py  bundle.py
pypinnch/action/clinic/: __init__.py  batchclinic.py  gradingclinic.py  icclinic.py  preemptionclinic.py  problemgetclinic.py  taweightingclinic.py  (+1 more)
pypinnch/engine/: __init__.py  stridesic.py  timeindependent.py
pypinnch/math/: __init__.py  smoothstep.py
pypinnch/model/: __init__.py  cnn.py  fnn.py  wtpnn.py
pypinnch/phase/: __init__.py  standardpinn.py
pypinnch/sampler/: __init__.py  buffer.py  constraintsampleset.py  cylinder.py  icbase.py  momentsets.py  samplesets.py  unit_hypercube.py
pypinnch/source/: __init__.py  box90.py  dataset.py  parametrized.py  simplex90.py  special.py  sphere90.py
pypinnch/strategy/: __init__.py  causalweighting.py  exponentialweight.py  grading.py  laweighting.py  lr_sched.py  optimizer.py  taweighting.py
(+39 files in other folders)
