[metadata]
name = PyPinnch
version = 0.4.2
author = Lucius Schoenbaum
author_email = lts0016@uah.edu
url = https://www.pypinnch.org
description = "A neural network PDE solver"
long_description = file: readme.txt
long_description_content_type = text/ascii
keywords = solver, pde, simulation, ml, pinn
license = BSD-1
classifiers =
    License :: OSI Approved :: BSD-1 License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
# install_requires = ...

# [options.entry_points]
# console_scripts =
#     foo = modulefoo.modulefoo2:methodfoo
